# multigres

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  multigres.conf.example  package.json  pgvpd.conf.example  resolvers.toml.example
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
docs/: architecture.md  drizzle-integration.md
docs/plans/: cadence-implementation-plan.md
docs/rfcs/: rfc-context-resolvers.md
prototype/: package-lock.json  package.json
prototype/src/: config.ts  connection.ts  index.ts  log.ts  protocol.ts  proxy.ts
sql/: helpers.sql  setup.sql
src/: admin.rs  auth.rs  config.rs  connection.rs  main.rs  metrics.rs  pool.rs  protocol.rs  proxy.rs  resolver.rs  stream.rs  tenant.rs  tls.rs
tests/: README.md  docker-compose.yml  fixtures.sql  pgvpd-admin-test.conf  pgvpd-pool-test.conf  pgvpd-resolver-test.conf  pgvpd-tenant-test.conf  pgvpd-test.conf  resolvers-test.toml  run.sh
tests/drizzle/: package-lock.json  package.json  run.sh  schema.ts  test.ts
