[package]
name = "pgvpd"
version = "0.3.0"
edition = "2024"
description = "Virtual Private Database for PostgreSQL — tenant isolation at the connection level"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.22"
md-5 = "0.10"
rand = "0.8"
